--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -18,9 +18,13 @@ jobs:
       - name: Git Sync Action
         uses: wei/git-sync@v3.0.0
         with:
-          source_repo: "szemyd/packaging-python"
+          source_repo: "git@github.com:szemyd/packaging-python.git"
           source_branch: "main"
-          destination_repo: "szemyd/packaging-python-public"
+          destination_repo: "git@github.com:szemyd/packaging-python-public.git"
           destination_branch: "main"
+          ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }} # optional
+          source_ssh_private_key: ${{ secrets.SOURCE_SSH_PRIVATE_KEY }} # optional, will override `SSH_PRIVATE_KEY`
+          destination_ssh_private_key: ${{ secrets.DESTINATION_SSH_PRIVATE_KEY }} # optional, will override `SSH_PRIVATE_KEY`
+          
 
 
