--- a/.github/workflows/copy_repo.yaml
+++ b/.github/workflows/copy_repo.yaml
@@ -1,5 +1,7 @@
 name: GitHub Actions Demo
-on: [push]
+on: 
+  schedule:
+    - cron: "0 3 * * 1,3,5" # Runs at 03:00 AM (UTC) every Monday, Wednesday, and Friday (Check https://crontab.tech/)
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
@@ -25,3 +27,25 @@ jobs:
           ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }} # optional
           source_ssh_private_key: ${{ secrets.SOURCE_SSH_PRIVATE_KEY }} # optional, will override `SSH_PRIVATE_KEY`
           destination_ssh_private_key:  ${{ secrets.DESTINATION_SSH_PRIVATE_KEY }} # optional, will override `SSH_PRIVATE_KEY` 
+      - uses: actions/checkout@v2
+      - uses: conda-incubator/setup-miniconda@v2
+        with:
+          auto-update-conda: false
+          activate-environment: strip
+          environment-file: strip_action.yaml
+          python-version: 3.9
+      - uses: iterative/setup-cml@v1
+      - name: Run empty function
+        shell: bash -l {0}
+        run: |
+          python -m libcst.tool codemod replace_functions.ReplaceFunctionCommand .
+      - name: Pushes to another repository
+        uses: cpina/github-action-push-to-another-repository@main
+        env:
+          API_TOKEN_GITHUB: ${{ secrets.DESTINATION_SSH_PRIVATE_KEY }}
+        with:
+          source-directory: '.'
+          destination-github-username: 'szemyd'
+          destination-repository-name: 'packaging-python-public'
+          user-email: szemy2@gmail.com
+          target-branch: main
