--- a/.github/workflows/copy_repo.yaml
+++ b/.github/workflows/copy_repo.yaml
@@ -1,7 +1,7 @@
 name: GitHub Actions Demo
 on: 
   push:
-  pull_request:
+#   pull_request:
   schedule:
     - cron: "0 3 * * 1,3,5" # Runs at 03:00 AM (UTC) every Monday, Wednesday, and Friday (Check https://crontab.tech/)
 jobs:
