--- a/.github/workflows/copy_repo.yaml
+++ b/.github/workflows/copy_repo.yaml
@@ -5,7 +5,7 @@ on:
   schedule:
     - cron: "0 3 * * 1,3,5" # Runs at 03:00 AM (UTC) every Monday, Wednesday, and Friday (Check https://crontab.tech/)
 jobs:
-  Explore-GitHub-Actions:
+  Copy-Repo-Strip-Functions:
     runs-on: ubuntu-latest
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
