--- a/.github/workflows/copy_repo.yaml
+++ b/.github/workflows/copy_repo.yaml
@@ -32,7 +32,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Checkout main branch
         run: |
-          git checkout main
+          git fetch
+          git checkout -m main
       - uses: conda-incubator/setup-miniconda@v2
         with:
           auto-update-conda: false
@@ -49,7 +50,8 @@ jobs:
           git config --global user.name "szemyd"
           git config --global user.email "szemy2@gmail.com"
           
-          git checkout main
+          git fetch
+          git checkout -m main
           git add -A
           git commit -m "Stripped functions"
           git push
